# cl_matrix

./: .gitignore  CMakeLists.txt  Makefile  PKG_ADD  README.md  backprop.m  backprop_cl.m  backprop_compare.m  el_sum_compare.m  sigmoid_compare.m  sum_compare.m
cmake/: FindOctave.cmake  FindOpenCL.cmake  FindclBLAS.cmake
include/: ClAmdBlasService.hpp  ClMatrix.hpp  ClService.hpp  octave_cl_matrix.hpp
src/: CMakeLists.txt  ClAmdBlasService.cpp  ClMatrix.cpp  ClService.cpp  compile_kernels.cpp  kernels.cl  octave_cl_matrix.cpp
test/: CMakeLists.txt  ClMatrixTest.cpp
